fix:se estan reparando los endpoitns de sectores
